# tg_secret

./: .gitignore  README.md  pyproject.toml
compiler/secret_api/: compiler.py
compiler/secret_api/template/: combinator.txt
tg_secret/: __init__.py  client.py  enums.py  exceptions.py  utils.py
tg_secret/client_adapters/: base_adapter.py  pyrogram_adapter.py  telethon_adapter.py
tg_secret/raw/: __init__.py  core.py  tl_object.py
tg_secret/storage/: __init__.py  base_storage.py  sqlite_storage.py
tg_secret/types/: secret_chat.py  secret_message.py
