[tool.poetry]
name = "tg-secret"
version = "0.1.0"
description = ""
authors = ["RuslanUC <dev_ruslan_uc@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tgcrypto = "^1.2.5"


[tool.poetry.group.dev.dependencies]
pyrogram = "^2.0.106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
